RP-73 Fixed spacing, cleaning

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 @import 'src/variables.scss';
 
 html {
-    font-size: 16px;
+    font-size: 12px;
     position: relative;
     min-height: 100%;
 }
